--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
             <div id="player-light" class="pulsating-light" ></div>
         </div>
       </div>
-   
+     
     <div class="matrix">
+        <div class="falling-number" id="falling-number1">0</div>
+        <div class="falling-number" id="falling-number2">0</div>
         <canvas id="matrixCanvas" class="matrix-canvas"></canvas>
         <div id="textOverlay">
             <span class="fade-text small">YOU'VE</span>
