--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="favicon.ico">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <div id="notificationBanner" class="hidden">
