--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <div id="player-light" class="pulsating-light" ></div>
         </div>
       </div>
-     
+    <div class="play-button-container">
+    <a href="https://ruggar.rugprotocol.ai" class="play-ruggar" target="_blank">GO RUGGAR</a>
+    </div>
     <div class="matrix">
         <div class="falling-number" id="falling-number1">0</div>
         <div class="falling-number" id="falling-number2">0</div>
